# tkaria11y

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS.md  CONTRIBUTING.md  DEMO_README.md  DEMO_SUMMARY.md  LICENSE  MIGRATION_SCRIPT_FIX.md  README.md  README_COMPREHENSIVE.md  ROADMAP.md  STUB_CONSOLIDATION_SUMMARY.md  STUB_GENERATION.md  comprehensive_demo.py  debug_ctk.py  debug_ctk_focus.py  debug_focus_registration.py  focus_test.py  inspect_ctk_widget.py  mypy.ini  pyproject.toml  run_accessibility_audit.py  simple_ctk_test.py  simple_demo.py  test_ctk_accessibility.py  test_ctk_button_focus.py  test_demos.py  test_enhanced_ctk.py  test_focus_navigation.py  test_migration_comprehensive.py  test_migration_new.py  test_nested_try.py  test_original.py  test_single_widget.py  test_stubs.py  test_tkinter_simple.py  test_unified_focus.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: accessibility_issue.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: CI.yml  publish.yml
a11y_audit/: README.md  __init__.py  ci_integration.py  config.py  linters.py  run_audit.py
a11y_audit/configs/: .flake8  .pylintrc  mypy.ini
docs/: getting-started.md  index.md
examples/: HIGH_CONTRAST_ACCESSIBILITY.md  THEME_FIXES_SUMMARY.md  THEME_IMPROVEMENTS.md  complete_accessibility_demo.py  complete_theme_example.py  comprehensive_accessibility_demo.py  comprehensive_demo.py  inspector_demo.py  main_window_theme_test.py  minimal_app.py  robust_theme_test.py  simple_theme_test.py  theme_demo.py
examples/migration_demo/: MIGRATION_SUMMARY.md  PYLINT_FIXES_SUMMARY.md  README.md  after_before_migration.py  after_simple_form.py  before_migration.py  complete_demo.py  demo_migration.py  migration_example.md  simple_form.py  test_file.py
generated_stubs/: __init__.pyi  a11y_engine.pyi  accessibility_validator.pyi  app.pyi  aria_compliance.pyi  audio_accessibility.pyi  braille_support.pyi  focus_manager.pyi  mixins.pyi  themes.pyi  utils.pyi  widgets.pyi
scripts/: generate_stubs.py
tests/: conftest.py  test_a11y_engine.py  test_app.py  test_comprehensive_accessibility.py  test_inspector.py  test_integration.py  test_mixins.py  test_placeholder.py  test_themes.py  test_widgets.py  xtestx_integration.py
tka11y/: __init__.py  a11y_engine.py
tka11y/stubs/: widgets.py
tkaria11y/: __init__.py  __init__.pyi  a11y_engine.py  accessibility_validator.py  app.py  aria_compliance.py  audio_accessibility.py  braille_support.py  ctk_focus_manager.py  ctk_widgets.py  ctk_wrappers.py  focus_manager.py  mixins.py  mixins.pyi  platform_adapter.py  themes.py  themes.pyi  utils.py  utils.pyi  utils_inspector.py  widgets.py  widgets.pyi
tkaria11y/scripts/: __init__.py  aria_compliance.md  aria_compliance.py  generate_stubs.py  migrate.py  stubgen.py
tkaria11y/stubs/: widgets.pyi
