[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-a11y"
version = "0.0.1"
description = "ARIA-style, TTS-driven accessibility layer for the Tk ecosystem"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="Stan Griffiths", email="stantgriffiths@gmail.com" }]
keywords = ["tkinter", "ttk", "accessibility", "a11y", "tts", "aria"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pyttsx3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "libcst",
  "mypy",
  "flake8",
  "black",
  "mkdocs",
]

[project.scripts]
tka11y-migrate = "scripts.generate_stubs:main"