[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkaria11y"
version = "0.0.1"
description = "ARIA-style, TTS-driven accessibility layer for the Tk ecosystem"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="Stan Griffiths", email="stantgriffiths@gmail.com" }]
keywords = ["tkinter", "ttk", "accessibility", "a11y", "tts", "aria"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pyttsx3",
  "click",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "libcst",
  "mypy",
  "flake8",
  "black",
  "mkdocs",
]

[project.scripts]
tkaria11y-migrate = "tkaria11y.scripts.migrate:main"
tkaria11y-stubgen = "tkaria11y.scripts.generate_stubs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tkaria11y*"]

[tool.setuptools.package-data]
tkaria11y = ["py.typed", "*.pyi", "stubs/*.pyi"]
